# linuxisocreator

./: LICENSE  MANIFEST.in  README.md  index.html  setup.cfg  setup.py
debian/: changelog  control  copyright  postinst  postrm  rules
src/LinuxIsoCreator/: cli.py  common.py  main.py
src/LinuxIsoCreator/ui/: linuxisocreator.ui
