[metadata]
name = linuxisocreator
version = file: src/LinuxIsoCreator/VERSION
author = Himadri Sekhar Basu
author_email = hsb10@iitbbs.ac.in
description = Linux ISO Creator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hsbasu.github.io/linuxisocreator/
project_urls =
    Bug Tracker = https://www.github.com/mamolinux/linuxisocreator/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved
     :: GNU General Public License v2 or later (GPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Accessories

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
include_package_data = True

[options.package_data]
* = *VERSION, *ui

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    linuxisocreator = LinuxIsoCreator.main:start_LinISOtorCli
